handle empty vehicle string correctly